whitespace fixed

--- a/react-app/src/components/Footer/Footer.css
+++ b/react-app/src/components/Footer/Footer.css
@@ -23,6 +23,7 @@ body, html {
     padding-top: 50px;
     padding-bottom: 50px;
     position: relative;
+    height: 25px;
 }
 
 .footer-left-top-bar {
