--- a/react-app/src/components/SingleStory/SingleStory.css
+++ b/react-app/src/components/SingleStory/SingleStory.css
@@ -8,7 +8,7 @@ body, html {
 
 
 .singlestorycontainer{
-    height: 83%;
+    min-height: calc(100vh - 255px);
 }
 
 #single-story-container {
